# ChangeLog for sci-geosciences/osm-gps-map
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Aug 2010; James Rowe <jnrowe@gmail.com> osm-gps-map-0.7.1.ebuild:
  Keyworded amd64.

*osm-gps-map-0.7.2 (03 Aug 2010)

  03 Aug 2010; James Rowe <jnrowe@gmail.com> +osm-gps-map-0.7.2.ebuild:
  Version bump [939].

  19 Jul 2010; James Rowe <jnrowe@gmail.com> osm-gps-map-0.7.0.ebuild:
  Keyworded x86.

  15 Jul 2010; James Rowe <jnrowe@gmail.com> osm-gps-map-0.7.0.ebuild:
  Keyworded amd64.

*osm-gps-map-0.7.1 (08 Jul 2010)

  08 Jul 2010; James Rowe <jnrowe@gmail.com> +osm-gps-map-0.7.1.ebuild:
  Version bump [a50].

  16 Jun 2010; James Rowe <jnrowe@gmail.com> osm-gps-map-0.7.0.ebuild:
  Keyworded ~x86.

  16 Jun 2010; James Rowe <jnrowe@gmail.com> osm-gps-map-0.7.0.ebuild:
  Fixed installation location for docs.

*osm-gps-map-0.7.0 (15 Jun 2010)

  15 Jun 2010; James Rowe <jnrowe@gmail.com> +osm-gps-map-0.7.0.ebuild,
  +files/osm-gps-map-0.7.0-gthread_fix.patch, +metadata.xml:
  Initial ebuild, by me.
