@@ -1,22 +1,0 @@
-net-libs/libsoup x11-libs/cairo x11-libs/gtk+ doc? ( dev-util/gtk-doc ) dev-util/pkgconfig gnome-base/gnome-common || ( =sys-devel/automake-1.11* ) >=sys-devel/autoconf-2.61 >=sys-devel/libtool-2.2.6b
-net-libs/libsoup x11-libs/cairo x11-libs/gtk+
-0
-http://www.johnstowers.co.nz/files/osm-gps-map/osm-gps-map-0.7.0.tar.gz
-
-http://nzjrs.github.com/osm-gps-map/
-GPL-3
-A Gtk+ Widget for Displaying OpenStreetMap tiles
-amd64 x86
-autotools eutils libtool multilib portability toolchain-funcs
-doc
-
-
-
-3
-
-configure install prepare
-
-
-
-
-
