@@ -6,7 +6,7 @@ http://www.johnstowers.co.nz/files/osm-gps-map/osm-gps-map-0.7.1.tar.gz
 http://nzjrs.github.com/osm-gps-map/
 GPL-3
 A Gtk+ Widget for Displaying OpenStreetMap tiles
-amd64 ~x86
+amd64 x86
 
 doc
 
