@@ -1,19 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+- -----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX osm-gps-map-0.7.0-build_fixes.patch 1081 RMD160 1899ffd2afe48edb3088a4b9abfef17e1a96d271 SHA1 bb0c11195d1e6c6dd2e89391865bebe944456c22 SHA256 6277f7154f9e2af8ef4dee5184f3735be77acbda3a16d33f04c189c512a8daca
-DIST osm-gps-map-0.7.0.tar.gz 418053 RMD160 328e08a797d30d495bf34b318d3bf7d03b348548 SHA1 0fbe891802e782081a06ac4a8765dd1bd10ba3ed SHA256 07ca8483278330c76b302d10fe559f3cafaa873411a36e40866caff499871753
 DIST osm-gps-map-0.7.1.tar.gz 413058 RMD160 32c3616e5d397787fafdbed89ae5a79e1ad4fdc0 SHA1 e883936f8a82eedce61a7117a623a01387c623e3 SHA256 b5f1836759e302d39dd23de827ad4f5d5027440d4fe62e183d23e6c514a04881
 DIST osm-gps-map-0.7.2.tar.gz 409016 RMD160 afc58ae6d58d59239c505ec147cae5d3193adcd4 SHA1 b2436bfdb9712ac2f31de83fedf922e3db0c0985 SHA256 aae29ac662b338e0f3c1642fc55b806d5a576a4f6a0e4f42794dff8942101240
-EBUILD osm-gps-map-0.7.0.ebuild 991 RMD160 04cce906b13151f9dedcd3e0ffd41ba64c31ca41 SHA1 09e15d0a3ccf0e0debd9eab10b718d7ecf9a2443 SHA256 deef1960b767ecc7b1c0f5f06c8abac9e61883e3acd3b28e275af69cb9569ca5
-EBUILD osm-gps-map-0.7.1.ebuild 896 RMD160 4e68cb6ade79544b7b603ef64fafcfdd5fbf86bc SHA1 17a15ad659087618d63a1825a04719203bd08519 SHA256 2cb2053426c70c71a1013ef8958d63c9f3f47a386bb934abaa13596b94da0c3a
+EBUILD osm-gps-map-0.7.1.ebuild 895 RMD160 300f747aae408e53979b5d3a8de3b2e5421daab3 SHA1 13bc1e70694bfbf7cae67fb6fc8a58c0a2fdd104 SHA256 4df397bf22c9e07c36b0f64f90f8d7b9a58d440a6dba26e527c66502ea254399
 EBUILD osm-gps-map-0.7.2.ebuild 1003 RMD160 adbc62acf2b0af97054fc5f3283f2ba0e02ce687 SHA1 9c341ceaa34cdea5a15f1b0e4e10502299d5377f SHA256 d0c288ce744681246a0a600eb20472660e71810fe12a54c75159315fcd50b682
-MISC ChangeLog 1052 RMD160 e9665f617ec1029c8868aae9dc0b8c254afc9955 SHA1 ac3d0d34c471cd9fd02991e135b228faada22d9f SHA256 27a0d29fe2138dca864bcf42780d536f354597331ee7027038c0410924bba519
+MISC ChangeLog 1170 RMD160 6079842ebcc7f68c64e1aa63a4bc7505a63a3fc9 SHA1 eefee3eacdba8be7d1090ed6c5115c62504d8416 SHA256 708e048aa690d440507ae71a4b4f947c17b44408a6dc6430a323cffa5a42c8f5
 MISC metadata.xml 892 RMD160 07bb2b370b2aa80e89d5c75abb1a75007a9f3c92 SHA1 7e4d94805b3faac2657ab1262988468556e0e067 SHA256 59aaa89219f0f5f45dad0749ef1e8d72db70514a045689fdf806055bebe6121d
+- -----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.15 (GNU/Linux)
+
+iEYEARECAAYFAkxe5dIACgkQzJrj3cAXR0mkQgCgryTtYNpgWgjf29KMpk7sLKBs
+cHwAnR/MZMs6yffuCJbAnid9FWk8uyZu
+=HcWC
+- -----END PGP SIGNATURE-----
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkxe4OYACgkQzJrj3cAXR0nj/QCfUVz+7x/qLpyRtbU2+fkYMO74
-HPcAnReXbDejazHA+hxX3CyP8jYqGItt
-=bZmJ
+iEYEARECAAYFAkxe68gACgkQzJrj3cAXR0mMXgCghb7VZ889uzhzhJvreL1Q+lfU
+3+AAn0OdhU3RkIjt7HczaTlqvs1GlzR+
+=UNtJ
 -----END PGP SIGNATURE-----
